--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "app-component",
-  "version": "1.0.0",
+  "name": "@mindtwo/app-component",
+  "version": "0.0.1",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "eslint": "^8.13.0",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard": "^17.0.0",
