--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mindtwo/app-component",
-  "version": "0.1.3",
+  "version": "0.1.3-c",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
