--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "@mindtwo/app-component",
-  "version": "0.1.6",
-  "description": "",
-  "main": "./src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "just-pascal-case": "^3.2.0",
-    "vue": "^3.2.45"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "eslint": "^8.30.0",
-    "eslint-config-semistandard": "^17.0.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1"
-  }
+    "name": "@mindtwo/app-component",
+    "version": "0.2.0",
+    "description": "Helper to mount vue components to the dom inside a vue app",
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.mjs",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.mjs",
+            "require": "./dist/index.cjs"
+        }
+    },
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "unbuild",
+        "babel": "babel src -d dist"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "just-pascal-case": "^3.2.0",
+        "vue": "^3.2.45"
+    },
+    "devDependencies": {
+        "eslint": "^8.30.0",
+        "eslint-config-semistandard": "^17.0.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.6.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "unbuild": "^1.2.1"
+    }
 }
