--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# Github Packages
-@mindtwo:registry=https://npm.pkg.github.com/
+# # Github Packages
+# @mindtwo:registry=https://npm.pkg.github.com/
